<resources>
    <string name="app_name" translatable="false">Kbin shell</string>

    <string name="top_threads">Top threads</string>
    <string name="hot_threads">Hot threads</string>
    <string name="new_threads">New threads</string>
    <string name="microblog">Microblog</string>
    <string name="subscribed_threads">Subscribed threads</string>
    <string name="moderated_threads">Moderated threads</string>
    <string name="moderated_magazines">Moderated magazines</string>
    <string name="my_content">My content</string>
    <string name="magazine">Magazine</string>


    <string name="settings">Settings</string>
    <string name="more_settings">More settings</string>

    <string name="inject_code">Inject code</string>
    <string name="inject_js">Inject JS</string>
    <string name="inject_css">Inject CSS</string>

    <string name="code">Code</string>
    <string name="save_code">Save code</string>

    <string name="font_size">Font size</string>
    <string name="smaller_font">Smaller font</string>
    <string name="bigger_font">Bigger font</string>

    <string name="external_links_default_browser">Open external links to default browser</string>
    <string name="show_reddit_links">Show reddit links</string>
    <string name="show_reddit_links_hint">Subs names separated by comma</string>

    <string name="urls_saved_clipboard">URL saved to clipboard</string>

    <string name="share">Share</string>
    <string name="share_url">Share URL</string>
    <string name="share_image_url">Share image URL</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="download_image">Download image</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="delete_bookmark_question">Do you want to delete the bookmark \"$1\"?</string>
    <string name="no_bookmarks">There are no bookmarks.\n\nTo add a bookmark click the icon with the three vertical dots located next to the page title and select \"Save\".</string>

</resources>