<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
      android:title="@string/settings"
      android:orderInCategory="10"
      app:showAsAction="never">
        <menu>
            <item
              android:title="@string/font_size"
              android:orderInCategory="10"
              app:showAsAction="never">
                <menu>
                    <item
                      android:id="@+id/smallerFont"
                      android:title="@string/smaller_font"
                      android:orderInCategory="10"
                      app:showAsAction="never"/>
                    <item
                      android:id="@+id/biggerFont"
                      android:title="@string/bigger_font"
                      android:orderInCategory="20"
                      app:showAsAction="never"/>
                </menu>
            </item>
            <item
              android:title="@string/inject_code"
              android:orderInCategory="20"
              app:showAsAction="never">
                <menu>
                    <item
                      android:id="@+id/settingInjectJS"
                      android:title="@string/inject_js"
                      android:orderInCategory="20"
                      app:showAsAction="never"/>
                    <item
                      android:id="@+id/settingInjectCSS"
                      android:title="@string/inject_css"
                      android:orderInCategory="30"
                      app:showAsAction="never"/>
                </menu>
            </item>
            <item
              android:id="@+id/moreSettings"
              android:title="@string/more_settings"
              android:orderInCategory="30"
              app:showAsAction="never"/>
        </menu>
    </item>

    <item
      android:title="kbin.social"
      android:orderInCategory="20"
      app:showAsAction="never">
        <menu>
            <item
              android:id="@+id/topThreadsKbin"
              android:title="@string/top_threads"
              android:orderInCategory="10"
              app:showAsAction="never"/>
            <item
              android:id="@+id/hotThreadsKbin"
              android:title="@string/hot_threads"
              android:orderInCategory="20"
              app:showAsAction="never"/>
            <item
              android:id="@+id/newThreadsKbin"
              android:title="@string/new_threads"
              android:orderInCategory="30"
              app:showAsAction="never"/>
            <item
              android:id="@+id/mblogKbin"
              android:title="@string/microblog"
              android:orderInCategory="40"
              app:showAsAction="never"/>
        </menu>
    </item>

    <item
      android:id="@+id/myContent"
      android:title="@string/my_content"
      android:orderInCategory="30"
      app:showAsAction="never">
        <menu>
            <item
              android:id="@+id/subscribedThreads"
              android:title="@string/subscribed_threads"
              android:orderInCategory="10"
              app:showAsAction="never"/>
            <item
              android:id="@+id/moderatedThreads"
              android:title="@string/moderated_threads"
              android:orderInCategory="20"
              app:showAsAction="never"/>
            <item
              android:id="@+id/moderatedMagazines"
              android:title="@string/moderated_magazines"
              android:orderInCategory="30"
              app:showAsAction="never"/>
            <item
              android:id="@+id/savedBookmarks"
              android:title="@string/bookmarks"
              android:orderInCategory="40"
              app:showAsAction="never"/>
        </menu>
    </item>

    <item
      android:id="@+id/magazineContent"
      android:title="@string/magazine"
      android:orderInCategory="40"
      app:showAsAction="never">
        <menu>
            <item
              android:id="@+id/topThreadsMagazine"
              android:title="@string/top_threads"
              android:orderInCategory="10"
              app:showAsAction="never"/>
            <item
              android:id="@+id/hotThreadsMagazine"
              android:title="@string/hot_threads"
              android:orderInCategory="20"
              app:showAsAction="never"/>
            <item
              android:id="@+id/newThreadsMagazine"
              android:title="@string/new_threads"
              android:orderInCategory="30"
              app:showAsAction="never"/>
            <item
              android:id="@+id/mblogMagazine"
              android:title="@string/microblog"
              android:orderInCategory="40"
              app:showAsAction="never"/>
        </menu>
    </item>
</menu>